crates/rome_cli/tests/snapshots/main::format/does_not_format_if_disabled.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}

```

# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
function f() {return{}}
```

```block
The content was not formatted because the formatter is currently disabled.
```


