crates/rome_cli/tests/snapshots/main::format/format_stdin_successfully.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
function f() {
	return {};
}

```


