crates/rome_cli/tests/snapshots/main::format/formatter_lint_warning.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `format.js`

```js
for(;true;);

```

# Emitted Messages

```block
format.js: help[Formatter]: Formatter would have printed the following content:
    | @@ -1 +1 @@
0   | - for(;true;);
  0 | + for (; true; );

```


