crates/rome_cli/tests/snapshots/main::format/formatter_print.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `format.js`

```js
  statement(  )  
```

# Emitted Messages

```block
format.js: help[Formatter]: Formatter would have printed the following content:
    | @@ -1 +1 @@
0   | -   statement(  )
  0 | + statement();

```


