crates/rome_cli/tests/snapshots/main::format/formatter_write.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `format.js`

```js
statement();

```

# Emitted Messages


